🐛 fix: update order header to full order
